--- a/src/components/Options/styles.css
+++ b/src/components/Options/styles.css
@@ -1,12 +1,6 @@
-.container {
-  background-color: aliceblue;
-  height: 70%;
-  width: 100%;
-}
-
 .options-list {
   width: 100%;
-  height: 50px;
+  height: 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -16,17 +10,18 @@
 }
 
 .options-item {
-  color: white;
+  color: rgb(196, 196, 196);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1rem;
+  font-size: 1.5rem;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(22, 22, 22);
+  background-color: rgb(37, 37, 37);
   transition: background-color 0.1s;
+  padding: 1rem;
 }
 
 .options-item:hover {
