--- a/src/global.css
+++ b/src/global.css
@@ -11,9 +11,13 @@ html, body, #root {
 }
 
 h1 {
-  color: white;
+  color: rgb(212, 212, 212);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+  width: 100%;
+  text-align: center;
+  margin: 1rem;
 }
 
 .main-container {
