--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -1,5 +1,62 @@
-.container {
+/* .container {
   height: 100%;
   width: 100%;
-  background-color: white;
+  background: linear-gradient(to left, rgb(34, 34, 34), rgb(44, 44, 44));;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+} */
+
+.list-group {
+  margin: 2rem;
+  width: 100%;
+  height: 100%;
+  list-style-type: none;
+  background-color: rgb(75, 75, 75);
+  overflow: scroll;
+}
+
+.list-group::-webkit-scrollbar {
+  width: 1.3rem;
+}
+
+.list-group::-webkit-scrollbar-track {
+  box-shadow: border-box;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.list-group::-webkit-scrollbar-thumb {
+  background-color: rgb(95, 95, 95);
+  outline: 1px solid rgb(88, 88, 88);
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* margin: 1rem; */
+  padding: 1rem;
+}
+
+span {
+  font-size: 1.2rem;
+  /* font-weight: bold; */
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
+}
+
+button {
+  width: 100px;
+  height: 40px;
+  font-size: 15px;
+  color: white;
+  font-weight: bold;
+  background: rgb(36, 36, 36);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px transparent;
+  border: 0px solid transparent;
+  text-shadow: 0px 0px 0px transparent; 
 }
