--- a/src/global.css
+++ b/src/global.css
@@ -14,10 +14,8 @@ h1 {
   color: rgb(212, 212, 212);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2rem;
-  width: 100%;
-  text-align: center;
-  margin: 1rem;
+  font-size: 2.5rem;
+  margin: 2.5rem;
 }
 
 .main-container {
@@ -25,6 +23,6 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  background:linear-gradient(to left, rgb(34, 34, 34), rgb(44, 44, 44));
-  height: 100%;
+  background: linear-gradient(to left, rgb(34, 34, 34), rgb(44, 44, 44));
+  height: 100vh;
 }
