--- a/src/global.css
+++ b/src/global.css
@@ -13,9 +13,11 @@ html, body, #root {
 h1 {
   color: rgb(212, 212, 212);
   font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Droid serif';
+  font-style: italic;
   font-size: 2.5rem;
-  margin: 2.5rem;
+  /* line-height: 44px; */
+  margin: 2rem;
 }
 
 .main-container {
