--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   list-style-type: none;
-  background-color: rgb(75, 75, 75);
+  background-color: rgb(30, 30, 30);
   overflow: scroll;
 }
 
@@ -24,7 +24,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem;
+  margin: 1rem 1rem 0 1rem;
+  padding: 0.5rem 1rem;
+  background-color: rgb(37, 37, 37);
+  -webkit-box-shadow: 0px 0px 4px 1px rgb(15, 15, 15);
+  -moz-box-shadow: 0px 0px 4px 1px rgb(15, 15, 15);
+  box-shadow: 0px 0px 4px 1px rgb(15, 15, 15);
 }
 
 span {
@@ -40,7 +45,7 @@ button {
   font-weight: bold;
   font-family: 'Droid serif';
   color: white;
-  background: rgb(36, 36, 36);
+  background: rgb(15, 15, 15);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -48,4 +53,8 @@ button {
   box-shadow: 0px 0px 0px transparent;
   border: 0px solid transparent;
   text-shadow: 0px 0px 0px transparent; 
+}
+
+button:hover {
+  background: rgb(0, 0, 0);
 }
