--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -45,14 +45,15 @@ button {
   font-weight: bold;
   font-family: 'Droid serif';
   color: white;
-  background: rgb(15, 15, 15);
+  background: rgb(19, 19, 19);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   cursor: pointer;
   box-shadow: 0px 0px 0px transparent;
   border: 0px solid transparent;
-  text-shadow: 0px 0px 0px transparent; 
+  text-shadow: 0px 0px 0px transparent;
+  transition: background 0.2s;
 }
 
 button:hover {
