--- a/src/global.css
+++ b/src/global.css
@@ -12,12 +12,19 @@ html, body, #root {
 
 h1 {
   color: rgb(212, 212, 212);
-  margin: 2rem;
+  margin: 1.5rem;
   font-weight: bold;
   font-family: 'Droid serif';
   font-style: italic;
   font-size: 2.5rem;
   text-shadow: 2px 2px 0 rgb(0, 0, 0);
+}
+
+p {
+  color: rgb(226, 226, 226);
+  font-family: Helvetica, sans-serif;
+  margin: 0 0 2rem 0;
+  font-size: small;
 }
 
 .main-container {
