retirei as opções e deixei o site mais simples, com as divisões entre tipos de arquivo na Main

--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,10 @@ html, body, #root {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
   color: rgb(212, 212, 212);
   margin: 1.5rem;
