--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -32,6 +32,15 @@
   box-shadow: 0px 0px 4px 1px rgb(15, 15, 15);
 }
 
+.list-category {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  color: white;
+  margin: 1rem;
+  padding: 0.75rem;
+  border-bottom: 1px solid rgba(255,255,255,0.48);
+}
+
 span {
   font-size: 1rem;
   font-family: Arial, Helvetica, sans-serif;
@@ -39,11 +48,14 @@ span {
 }
 
 button {
-  width: 100px;
   height: 40px;
+  padding: 1rem;
   font-size: 15px;
   font-weight: bold;
   font-family: 'Droid serif';
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: white;
   background: rgb(19, 19, 19);
   -webkit-border-radius: 10px;
